# mod37_3

./: CMakeLists.txt  main.cpp  path.qrc  tv_remote_control.cpp  tv_remote_control.h  tv_remote_control.ui
